--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,9 @@
   "description": "Template for ExpressJS API with Mongoose for Web and Mobile Engineering (DIT342)",
   "main": "./app.js",
   "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js",
+  "start": "node ./app.js",
+  "dev": "nodemon ./app.js",
+  "demo": "node ./mongoDBTester.js",
     "lint": "eslint .",
     "test": "cross-env-shell MONGODB_URI=mongodb://localhost:27017/serverTestDB \"npm run newman-server\"",
     "ci-test": "npm run newman-server",
