--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "postinstall": "npm install --prefix server && npm install --prefix client && npm run build --prefix client"
   },
-  "engines" : {
-    "npm" : "11.x",
+  "engines": {
+    "npm": "11.x",
     "node": "22.x"
+  },
+  "dependencies": {
+    "oh-vue-icons": "^1.0.0-rc3"
   }
 }
