--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "ci-test": "npm run newman-server",
     "newman-server": "cross-env-shell PORT=3001 \"npm run dropdb && run-p --race start newman-wait\"",
     "newman-wait": "wait-on http://localhost:3001/api && npm run newman",
-    "newman": "newman run ./tests/server.postman_collection.json --env-var host=http://localhost:3001 --env-var adminDeleteToken=$ADMIN_DELETE_TOKEN",
+    "newman": "newman run ./tests/server.postman_collection.json --env-var host=http://localhost:3001",
     "dropdb": "node ./tests/dropdb.js"
   },
   "repository": {
