--- a/client/.env.sample
+++ b/client/.env.sample
@@ -1,1 +1,4 @@
-VITE_API_ENDPOINT=http://localhost:5000/api
+export NODE_ENV=production
+export MONGO_URI=mongodb://localhost:27017/polyWatchDB
+export VITE_API_ENDPOINT=http://localhost:3000/api
+
